test/should-not-compile/class-private-props.ki

use ns;

fn main {
	let x = ns:APublicClass{};
	let a = x.private_prop;
	x.private_func();
}
